# ModelViewer

./: CMakeLists.txt  main.cpp
cmake/: FindAssimp.cmake  FindOsg.cmake
src/gui/: CMakeLists.txt  DetailDataWidget.cpp  DetailDataWidget.h  MainWindow.cpp  MainWindow.h  Mainwindow.ui  OsgWidget.cpp  OsgWidget.h  OutputMessageWidget.cpp  OutputMessageWidget.h  PropertyWidget.cpp  PropertyWidget.h  Resource.qrc  SceneManageWidget.cpp  SceneManageWidget.h  StatusMonitorWidget.cpp  StatusMonitorWidget.h
src/gui/Resource/: aclogo.icon
src/io/: AssimpLoader.cpp  AssimpLoader.h  CMakeLists.txt
src/modelData/: CMakeLists.txt  modelData.h
src/scene/: CMakeLists.txt  RootScene.h  SceneViewer.cpp  SceneViewer.h
